Extract table template and fix `text-align`

--- a/public/static/css/_layout.scss
+++ b/public/static/css/_layout.scss
@@ -17,10 +17,12 @@ $small-space: 10px;
 
 .center-container {
     @include flex-container(center);
+    text-align: center;
 }
 
 .center-column-container {
     @include flex-container(center);
+    text-align: center;
     flex-direction: column;
 }
 
